auth documentation added
